Fix clipping issues on iphone sized devices

--- a/src/home/Section.css
+++ b/src/home/Section.css
@@ -16,10 +16,16 @@
 }
 
 /*Added to fix viewport display issues on devices with heights smaller than 500px*/
-@media (max-height: 500px) {
+@media (max-height: 600px) {
   .section{
     min-height: 100vh;
     height: auto;
     position: relative;
   }
+  .text-box {
+    text-align: center;
+    margin: 50px auto 0;
+    max-width: 600px;
+  }
+
 }
